<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Vijayam</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_my_courses">My Courses</string>
    <string name="title_activity_questions">QuestionsActivity</string>

    <string name="questions">Questions</string>
    <string name="question_no">Question No : <xliff:g id="question_number">%1$d</xliff:g> of <xliff:g id="total_questions">%2$d</xliff:g></string>
    <string name="question_content"><![CDATA[No Questions Found]]></string>
    <string name="mark_for_review">Mark for Review</string>
    <string name="no_results">No Results Found</string>
    <string name="questionImage">Image</string>
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="action_finish">Finish</string>
    <string name="list">All Questions</string>
    <string name="verify">Verify</string>
    <string name="title_activity_splash">SplashActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="splash_screen_caption">For the winners</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="browseCourses">Browse Courses</string>
    <string name="practiceTests">Mock Exams</string>
    <string name="search">Search</string>
    <string name="resume">Resume Last Session</string>
    <string name="login">Login</string>
    <string name="title_activity_setup">SetupActivity</string>
    <string name="register">Register</string>
    <string name="later">Later</string>
    <string name="setup_message">Avail content updates by the providing the following details. However, you can register later by skipping this step and view the generic content available in-built with the App</string>
    <!--<string name="institute_code">Institute Code</string>-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="no_connection">Please turn on either mobile-data or wifi</string>
    <string name="no_connection_title">Network connection not available</string>
    <string name="settings_button_text">Settings</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="sync">Sync</string>
</resources>
