<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.SetupActivity"
    android:gravity="center">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:fillViewport="true" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="false"
                android:layout_alignParentLeft="false"
                android:layout_alignParentRight="false"
                android:layout_alignParentStart="false"
                android:layout_margin="10dp"
                android:text="@string/setup_message"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/instituteLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginRight="10dp"
                    android:layout_weight="10"
                    android:gravity="right"
                    android:text="@string/institute_code"
                    android:textSize="@dimen/abc_text_size_medium_material" />

                <EditText
                    android:id="@+id/instituteCode"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="5"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/emailLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/instituteLayout"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginRight="10dp"
                    android:layout_weight="10"
                    android:gravity="right"
                    android:text="@string/email"
                    android:textSize="@dimen/abc_text_size_medium_material" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="5"
                    android:inputType="textEmailAddress" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/passwordLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailLayout"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginRight="10dp"
                    android:layout_weight="10"
                    android:gravity="right"
                    android:text="@string/password"
                    android:textSize="@dimen/abc_text_size_medium_material" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="5"
                    android:inputType="textPassword" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/buttonLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/passwordLayout"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:text="@string/later"
                    android:layout_marginRight="10dp"
                    android:onClick="registerLater"
                    style="@style/AppTheme" />

                <Button
                    android:id="@+id/skip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:layout_toRightOf="@id/login"
                    android:text="@string/register"
                    android:layout_marginLeft="10dp"
                    android:onClick="register"
                    style="@style/AppTheme" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
